--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kaz_furniture.todoapplication">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".ToDoApplication"
+        android:name="kaz_furniture.todoapplication.ToDoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8695426312289248~1049606642"/>
+        <activity android:name="kaz_furniture.todoapplication.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".editInfo.EditActivity"/>
-        <activity android:name=".addInfo.AddActivity"/>
+        <activity android:name="kaz_furniture.todoapplication.editInfo.EditActivity"/>
+        <activity android:name="kaz_furniture.todoapplication.addInfo.AddActivity"/>
     </application>
 
 </manifest>
